--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ background-color: black;
             />
           </div>
           <ul class="bnrList">
-            <li>Günstige Lösung! Keine Arzthonorare!</li>
+            <li>Günstige Produkt! Keine Arzthonorare!</li>
             <li>Verbessert die Blutzirkulation</li>
             <li>Lindert Muskelschmerzen</li>
             <li>Beseitigt chronische Fußschmerzen</li>
@@ -417,7 +417,7 @@ background-color: black;
               Erleben Sie die bemerkenswerte Verwandlung, wenn es die
               Blutzirkulation erhöht und Cellulite-Klumpen an Ihren Beinen und
               Oberschenkeln beseitigt. Wenn Sie den ganzen Tag am Schreibtisch
-              sitzen, ist dieses Fußmassagegerät die ultimative Lösung für
+              sitzen, ist dieses Fußmassagegerät die ultimative Produkt für
               völlige Entlastung und Entspannung.
             </p>
             <p>
@@ -482,7 +482,7 @@ background-color: black;
         <div
           class="container mx-auto is-max-desktop has-text-centered is-size-5 is-size-6-mobile"
         >
-          Die komplette Smart Pain Free Lösung in Ihren Händen! Egal, ob Sie ein
+          Die komplette Smart Pain Free Produkt in Ihren Händen! Egal, ob Sie ein
           Fitness-Enthusiast sind oder unter ständigen Schmerzen leiden, das
           Ryoku Muscle Pain Relief ist vollgepackt mit Funktionen, um die Wurzel
           Ihrer Schmerzen zu lösen!
